Fix align, affected the opened hakukohde list also which looked broken

--- a/resources/less/virkailija-application.less
+++ b/resources/less/virkailija-application.less
@@ -541,13 +541,16 @@ th.application__readonly-adjacent--header {
 }
 
 .application__search-control-haku {
-  display: flex;
-  align-items: center;
   color: @pale-blue;
   margin-bottom: 28px;
   padding: 20px 10px;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
   border-radius: 3px;
+}
+
+.application__search-control-tarjonta-haku-info {
+  display: flex;
+  align-items: center;
 }
 
 .application__search-control-haku.application__search-control-direct-form-haku {
